[package]
name = "hello_world"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false


[dependencies]
eframe = "0.20.1"
tracing-subscriber = "0.3"
dirs = "4.0"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = "0.4.23"
chrono-tz = "0.8.1"
uuid = { version = "1.2", features = ["serde", "v4"] }
