[package]
name = "tot"
description = "A tiny GUI that displays The One Thing you need to do next"
version = "0.1.1"
authors = ["Alan Vardy <alan@vardy.cc>"]
license = "MIT"
edition = "2021"

[dependencies]
eframe = "0.20.1"
tracing-subscriber = "0.3"
dirs = "4.0"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = "0.4.23"
chrono-tz = "0.8.1"
uuid = { version = "1.2", features = ["serde", "v4"] }


[dev-dependencies]
mockito = "0.31.1"
pretty_assertions = "1.3.0"
